--- a/spotifyadder/songs/templates/songs/song/detail.html
+++ b/spotifyadder/songs/templates/songs/song/detail.html
@@ -30,6 +30,7 @@
           <span class="total">{{ total_likes }}</span>
           like{{ total_likes|pluralize }}
         </span>
+        <span class="count">{{ total_views }} view{{ total_views|pluralize }}</span>
         <a href="#" data-id="{{ song.id }}" data-action="{% if request.user in users_like %}un{% endif %}like"
     class="like button">
           {% if request.user not in users_like %}
